--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.4.0"
+    "express-validator": "^5.3.1",
+    "mongoose": "^5.4.0",
+    "nodemailer": "^5.0.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "nodemon": "^1.18.9"
   }
 }
